--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.10",
-    "pinia": "^2.0.36"
+    "google-auth-library": "^8.8.0",
+    "pinia": "^2.0.36",
+    "vue3-google-login": "^2.0.15"
   }
 }
